--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body{
 
-    background-image: url(./background.jpeg);
+    background-color: rgb(65, 65, 65);
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -8,17 +8,10 @@ body{
 
 }
 
-header,footer{
-
-    padding: 1%;
-
-}
-
 a{
 
     text-decoration: none;
     color: white;
-    margin-right: 10%;
 }
 
 main{
@@ -34,15 +27,51 @@ img{
 
 }
 
+header, footer{
+
+    padding: 1%;
+    background: rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    
+}
+
+header{
+
+    margin-bottom: 2%;
+
+}
+
 section{
 
+    background: rgba(187, 187, 187, 0.25);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 2%;
     width:49%;
-background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
-    
+    margin-bottom: 2%;
+
+}
+
+footer{
+
+    padding: 1%;
+}
+
+h1{
+
+    margin-top: 0px;
+}
+
+.links-header{
+
+font-size: 1.2rem;
+margin-right: 10%;
+
 }
 
