--- a/css.css
+++ b/css.css
@@ -1,6 +1,8 @@
+/* GENERAL */
+
 body{
 
-    background-color: rgb(65, 65, 65);
+    background-image: url(./15-CSS-Animated-Backgrounds-Pintire.gif);
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -8,30 +10,43 @@ body{
 
 }
 
+ul{
+  
+    
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+
+}
+
 a{
 
     text-decoration: none;
     color: white;
+    opacity: 0.5;
+    transition: 0.6s;
 }
 
-main{
-
-    margin: 0% 10% 0% 10%;
-    
+a:hover{
+    opacity: 1;
 }
 
-img{
+h1{
 
-    width: 30%;
-    margin-left: 1%;
-
+    margin:0px;
+    padding:0px;
 }
+
+
+
+/* HEADER */
+
 
 header, footer{
 
     padding: 1%;
-    background: rgba(0, 0, 0, 0.25);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    background: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.57);
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
     border: 1px solid rgba( 255, 255, 255, 0.18 );
@@ -41,37 +56,122 @@ header, footer{
 header{
 
     margin-bottom: 2%;
+    position: sticky;
+    top: 0px;
+    z-index:1;
 
 }
 
-section{
+.list-nav{
 
-    background: rgba(187, 187, 187, 0.25);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    padding: 2%;
-    width:49%;
-    margin-bottom: 2%;
+    list-style-type: none;
 
-}
 
-footer{
-
-    padding: 1%;
-}
-
-h1{
-
-    margin-top: 0px;
 }
 
 .links-header{
 
-font-size: 1.2rem;
-margin-right: 10%;
+    font-size: 1.2rem;
+    margin-right: 10%;
+    
+    }
+
+.header-ul{
+
+    list-style-type: none;
+    padding: 0px;
+    margin-left: 0px;
+    display: flex;
+    justify-content: space-around;
 
 }
 
+/* MAIN INFORMATION */
+
+main{
+
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10%;
+
+}
+
+.container-main{
+
+    display: flex;
+    align-items: center;
+
+}
+
+.container-secondary{
+
+    display: grid;
+    align-items: center;
+
+    
+}
+
+
+section{
+
+    background: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.57);
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 4%;
+    margin-bottom: 2%;
+    margin: 1%;
+
+}
+
+section:hover{
+
+    background: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.57);
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 3px solid rgba( 255, 255, 255, 0.18 );
+    padding: 4%;
+    margin-bottom: 2%;
+    margin: 1%;
+
+}
+
+
+.img-datos-personales{
+
+    width: 250px;
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    border-radius: 50%;
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.57);
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border: 2px solid rgba(255, 0, 183, 0.093);
+
+    opacity: 0.2;
+    transition: 2s;
+}
+
+.img-datos-personales:hover{
+    opacity: 1;
+}
+
+/* FOOTER */
+
+footer{
+    margin-top: 2%;
+
+    padding: 1%;
+    
+}
+
+.ul-footer{
+    display: flex;
+    gap: 40px;
+    justify-content: space-evenly;
+}
