--- a/css.css
+++ b/css.css
@@ -103,6 +103,13 @@ main{
 
 }
 
+.sub-container-main{
+
+    display: grid;
+    grid-template-columns: auto auto;
+
+}
+
 .container-secondary{
 
     display: grid;
@@ -123,20 +130,16 @@ section{
     padding: 4%;
     margin-bottom: 2%;
     margin: 1%;
+    opacity: 0.5;
+    transition: 1s;
 
 }
 
 section:hover{
 
-    background: rgba(0, 0, 0, 0.4);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.57);
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
-    border: 3px solid rgba( 255, 255, 255, 0.18 );
-    padding: 4%;
-    margin-bottom: 2%;
-    margin: 1%;
+    border: 1px solid rgba(0, 0, 0, 0.18);
+    opacity: 1;
+
 
 }
 
@@ -144,21 +147,13 @@ section:hover{
 .img-datos-personales{
 
     width: 250px;
-    position: absolute;
-    top: 25%;
-    left: 35%;
+
     border-radius: 50%;
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.57);
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
     border: 2px solid rgba(255, 0, 183, 0.093);
 
-    opacity: 0.2;
-    transition: 2s;
-}
-
-.img-datos-personales:hover{
-    opacity: 1;
 }
 
 /* FOOTER */
