Arreglat Problemes de Posicionament, Introduït Pagines Externes, Login, Contact, Register

--- a/other_pages/Contact/css.css
+++ b/other_pages/Contact/css.css
@@ -6,7 +6,7 @@
 
 body{
 
-    background-image: url(./images/background.gif);
+    background-image: url(../../images/background.gif);
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -86,7 +86,6 @@ header{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    gap: 20px;
 
 }
 
@@ -99,33 +98,18 @@ header{
 
 main{
 
-    margin: 6% 30px 6% 30px;
+    margin: 120px 30px 120px 30px;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     gap: 10%;
 
 }
 
 .container-main{
 
-    display: flex;
-    align-items: center;
+    width: 100%;
+    text-align: center;
 
-}
-
-.sub-container-main{
-
-    display: grid;
-    grid-template-columns: auto auto;
-
-}
-
-.container-secondary{
-
-    display: grid;
-    align-items: center;
-
-    
 }
 
 
@@ -145,6 +129,7 @@ section{
 
     opacity: 0.5;
     transition: 1s;
+    font-size: 2rem;
 
 }
 
@@ -155,33 +140,6 @@ section:hover{
 
 
 }
-
-
-.img-datos-personales{
-
-    width: 250px;
-
-    border-radius: 50%;
-    border: 2px solid rgba(255, 0, 183, 0.093);
-
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.57);
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-
-}
-
-
-table{
-
-    margin-top: 16px;
-    border-collapse: collapse;
-    width: 100%;
-    
-}
-
-tbody td {
-    text-align: center;
-  }
 
 /* FOOTER */
 
@@ -216,9 +174,6 @@ footer{
     main{
 
         grid-template-columns: auto;
-        margin: 6% 30px 15% 30px;
-
-        
     
     }
 
@@ -259,7 +214,7 @@ footer{
     main{
 
         gap: 1%;
-        margin: 0% 0% 60px 0%;
+        margin: 120px 0px 120px 0px;
         text-align: center;
     
     }
@@ -269,14 +224,6 @@ footer{
         display: grid;
         grid-template-columns: auto;
     
-    }
-
-    .container-secondary{
-
-        gap: 4%;
-
-
-
     }
 
     section{
